# repotasks

./: .gitignore  .prettierignore  LICENSE  NOTES.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
docs/: roadmap.md
src/: Board.tsx  Capture.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  notes.rs  store.rs
src/lib/: api.ts
